Prevent the new Patreon header link from jumping on `:active`

--- a/_src/_assets/css/index.css
+++ b/_src/_assets/css/index.css
@@ -262,6 +262,9 @@ a.cta-prod {
 	color: #000;
 	opacity: 1;
 }
+.site-head a.patreon:active {
+	bottom: auto;
+}
 .site-head a.patreon svg {
 	padding: 1px 2px 1px 4px;
 	width: 22px;
